# tratativa-base-tratativa-solucao

./: .gitignore  Automacao_SSW.py  BD_Ocorrencia.py  CapSolver.py  README.md  _150.py  _455.py  _930.py  funcoes.py  main.py  pyproject.toml  relatorios.py  requirements.txt
utils/: log_config.py  utils.py
